--- a/Uma_Implementação_de_Perceptron_Quântico_para_Classificação_Binária.ipynb
+++ b/Uma_Implementação_de_Perceptron_Quântico_para_Classificação_Binária.ipynb
@@ -28,6 +28,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "992_U6yQrXwb"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "**Uma Implementação de Perceptron Quântico para Classificação Binária**\n",
         "\n",
@@ -639,13 +646,92 @@
         "print(f'Test Loss: {np.mean(errors)}')  # Calculando a perda média\n",
         "print(f\"Tempo de Processamento: {tempo_decorrido:.2f} segundos\")\n",
         "print(f'Test Accuracy: {accuracy}')\n",
-        "circuit.draw(output='text')\n"
+        "circuit.draw()\n"
       ],
       "metadata": {
         "id": "q0kSthYFaZzC"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Plano de Aula: Introdução à Computação Quântica através da Classificação de Dados**\n",
+        "\n",
+        "**Objetivo Geral**:\n",
+        "Apresentar aos alunos os conceitos básicos da computação quântica, demonstrando sua aplicação prática através da classificação do conjunto de dados Iris.\n",
+        "\n",
+        "**Objetivos Específicos**:\n",
+        "1. Introduzir os conceitos fundamentais da computação quântica.\n",
+        "2. Familiarizar os alunos com o conjunto de dados Iris.\n",
+        "3. Demonstração prática da aplicação de um modelo quântico em um problema de classificação.\n",
+        "\n",
+        "**Materiais Necessários**:\n",
+        "- Computadores com acesso à internet.\n",
+        "- Softwares de programação Python e Qiskit instalados.\n",
+        "- Projetor para demonstrações.\n",
+        "\n",
+        "**Duração**: 2 aulas de 50 minutos cada.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Aula 1: Introdução à Computação Quântica e Conjunto de Dados Iris**\n",
+        "\n",
+        "1. **Abertura (10 minutos)**:\n",
+        "   - Discussão: \"O que vocês sabem sobre computação quântica?\"\n",
+        "   - Breve visão geral do que será abordado na aula.\n",
+        "\n",
+        "2. **Introdução à Computação Quântica (15 minutos)**:\n",
+        "   - Explicação sobre o que é um qubit.\n",
+        "   - Discussão sobre superposição e entrelaçamento.\n",
+        "   - Demonstração básica de um circuito quântico usando Qiskit.\n",
+        "\n",
+        "3. **Conjunto de Dados Iris (20 minutos)**:\n",
+        "   - Discussão sobre o que é classificação.\n",
+        "   - Apresentação do conjunto de dados Iris: características e classes.\n",
+        "   - Visualização dos dados: gráficos mostrando a distribuição das características.\n",
+        "\n",
+        "4. **Encerramento (5 minutos)**:\n",
+        "   - Resumo do que foi aprendido.\n",
+        "   - Introdução ao que será abordado na próxima aula.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Aula 2: Modelagem Quântica e Classificação de Dados**\n",
+        "\n",
+        "1. **Abertura (10 minutos)**:\n",
+        "   - Revisão rápida dos conceitos da aula anterior.\n",
+        "   - Discussão: \"Como vocês acham que podemos usar a computação quântica para classificar flores?\"\n",
+        "\n",
+        "2. **Modelo de Aprendizado Quântico (15 minutos)**:\n",
+        "   - Explicação sobre como os qubits podem ser usados para representar dados.\n",
+        "   - Discussão sobre como construir um circuito quântico para classificação.\n",
+        "   - Demonstração de um circuito quântico simples usando Qiskit.\n",
+        "\n",
+        "3. **Treinamento e Avaliação (20 minutos)**:\n",
+        "   - Discussão sobre como os modelos são treinados: atualização de pesos.\n",
+        "   - Demonstração prática do código: treinando e avaliando o modelo quântico no conjunto de dados Iris.\n",
+        "   - Interpretação dos resultados: matriz de confusão, Curva ROC.\n",
+        "\n",
+        "4. **Encerramento (5 minutos)**:\n",
+        "   - Discussão sobre as vantagens e limitações da computação quântica.\n",
+        "   - Encorajamento para os alunos explorarem mais sobre o tema e pensarem em outras aplicações.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Avaliação**:\n",
+        "- Ao final das duas aulas, os alunos serão incentivados a refletir e discutir sobre as possíveis aplicações da computação quântica.\n",
+        "- Será proposto um exercício prático onde os alunos deverão modificar o código para classificar uma nova classe do conjunto de dados Iris, testando suas habilidades e compreensão do conteúdo apresentado.\n",
+        "\n",
+        "**Dicas**:\n",
+        "- A abordagem deve ser interativa, estimulando a participação ativa dos alunos.\n",
+        "- Os conceitos quânticos podem ser complexos, então é importante garantir que os alunos estejam acompanhando e entendendo.\n",
+        "- Usar analogias e exemplos do mundo real pode ajudar a tornar o conteúdo mais acessível."
+      ],
+      "metadata": {
+        "id": "v31zO7hUrbOF"
+      }
     }
   ]
 }
